리스너/필터

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+        <!--한글 필터 추가   -->
+    <filter>
+        <filter-name>utf8filter</filter-name>
+        <filter-class>org.example.demo5.Utf8Filter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>utf8filter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+        <!--한글 필터 -->
+    <listener>
+        <listener-class>org.example.demo5.AppContextListener</listener-class>
+    </listener>
     <servlet>
         <servlet-name>helloServlet</servlet-name>
         <servlet-class>org.example.demo5.HelloServlet</servlet-class>
